# c_api_test

./: CMakeLists.txt
src/: detector.c  detector.h  main.c  nanodet.c  vec_testing.c
src/detector/: CMakeLists.txt  detector.c  detector.h  fastestdet.c  nanodet.c
